--- a/views/layout.njk
+++ b/views/layout.njk
@@ -1,14 +1,17 @@
 <!doctype html>
 <html lang="en">
 <head>
-	<meta charset="utf-8">
-	<title>{{ pageTitle }}</title>
-	<link rel="stylesheet" href="/css/main.css"/>
+  <meta charset="utf-8">
+  <title>{{ pageTitle }}</title>
+  <link rel="stylesheet" href="/css/main.css"/>
 </head>
 <body>
-	{% block content %}{% endblock %}
-<footer>
-	{% block footer %}{% endblock %}
-</footer>
+  <nav>
+    <img src="/assets/images/logo.png" alt="Logo">
+  </nav>
+  {% block content %}{% endblock %}
+  <footer>
+    {% block footer %}{% endblock %}
+  </footer>
 </body>
 </html>
