--- a/views/home.njk
+++ b/views/home.njk
@@ -7,7 +7,7 @@
 			<p>Some text goes here...</p>
 		</div>
 		<div class="image">
-			<img src="/assets/placeholder.png" alt="Placeholder Image">
+			<img src="/assets/images/placeholder.png" alt="Placeholder Image">
 		</div>
 	</section>
 
